Fix multiline comments formatting

--- a/tests/expressions/multiline_comment.html.erb
+++ b/tests/expressions/multiline_comment.html.erb
@@ -1,12 +1,75 @@
 <%#
-# Flash Partial
+This fails
+  hey
+    hey
+      hey
+  hey
+%>
 
-This partial renders flash messages on every page.
+<%#
+    This fails
+    hey
+      hey
+        hey
+    hey
+%>
 
-## Relevant Helpers:
+<%#
+  This fails
+  hey
+    hey
+      hey
+  hey
+%>
 
-- `flash`:
-  Returns a hash,
-  where the keys are the type of flash (alert, error, notice, etc)
-  and the values are the message to be displayed.
+<%# This fails
+  This fails
+  hey
+    hey
+      hey
+  hey
+%>
+
+<%# This fails
+This fails
+  hey
+    hey
+      hey
+  hey
+%>
+
+<%# This fails
+    This fails
+    hey
+      hey
+        hey
+    hey
+%>
+
+<%#This fails
+  This fails
+  hey
+    hey
+      hey
+  hey
+%>
+
+<%#    This fails
+  This fails
+  hey
+    hey
+      hey
+  hey
+%>
+
+<%#
+    hey
+%>
+
+<%#
+  hey
+%>
+
+<%#
+hey
 %>
